// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Issue Link Command - Help Text 1`] = `
"stdout:
"Usage: link [options] <urlOrIssueId> [url]

Link a URL to an issue

Options:
  -t, --title <title>  Custom title for the link
  -h, --help           display help for command

Examples:
  $ linear issue link https://github.com/org/repo/pull/123
  $ linear issue link ENG-123 https://github.com/org/repo/pull/123
  $ linear issue link ENG-123 https://example.com --title "Design doc"
"
stderr:
"""
`;

exports[`Issue Link Command - link URL to issue 1`] = `
"stdout:
"✓ Linked to ENG-123: org/repo#42
"
stderr:
"""
`;

exports[`Issue Link Command - link URL with custom title 1`] = `
"stdout:
"✓ Linked to ENG-456: Design document
"
stderr:
"""
`;

exports[`Issue Link Command - invalid URL shows error 1`] = `
"stdout:
""
stderr:
"✗ Failed to link URL: Expected a URL but got 'not-a-url'
  Provide a URL starting with http:// or https://.
""
`;

exports[`Issue Link Command - issue not found 1`] = `
"stdout:
""
stderr:
"✗ Failed to link URL: Issue not found: ENG-999
""
`;
